--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,13 @@
   margin: 0;
   padding: 0;
 }
-
+@font-face {
+  font-family: 'dubsteptrix';
+  src: url('public/fonts/DubsteptrixRegular-OK74.ttf') format('truetype');
+}
 /* Set body styles */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'dubsteptrix', sans-serif;
   background-color: #f5f5f5;
   color: #333;
 }
