--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 }
 @font-face {
   font-family: 'dubsteptrix';
-  src: url('/fonts/DubsteptrixRegular-OK74.ttf') format('truetype');
+  src: url('./fonts/DubsteptrixRegular-OK74.ttf') format('truetype');
 }
 /* Set body styles */
 body {
